[project]
name = "backend-dev-task"
version = "0.1.0"
description = "Solar panel layout calculator"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "matplotlib>=3.8",
  "pillow>=10.0",
]
viz = [
  "matplotlib>=3.8",
  "pillow>=10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
